Ease of use fixes (scrollbars, reloading)

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@
   font-weight: 500;
   font-size: 1.25rem;
   height: 500px;
+  overflow: scroll;
 }
 
 footer {
